{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 60,
  "lineage": "673270ea-25d9-ba83-1523-3e07c0bebff7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "new-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:327165841486:internet-gateway/igw-0c0243667470ed8e9",
            "id": "igw-0c0243667470ed8e9",
            "owner_id": "327165841486",
            "tags": {
              "Name": "fullcycle-igw"
            },
            "tags_all": {
              "Name": "fullcycle-igw"
            },
            "vpc_id": "vpc-03786ba3c3ec5ea1a"
          },
          "dependencies": [
            "aws_vpc.new-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "new-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:327165841486:route-table/rtb-09a4afcd5dbf1124d",
            "id": "rtb-09a4afcd5dbf1124d",
            "owner_id": "327165841486",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c0243667470ed8e9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "fullcycle-rtb"
            },
            "tags_all": {
              "Name": "fullcycle-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-03786ba3c3ec5ea1a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.new-igw",
            "aws_vpc.new-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "new-rtb-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0194fc403f16671f8",
            "route_table_id": "rtb-09a4afcd5dbf1124d",
            "subnet_id": "subnet-0bb8c2e0e6a2cc4a7"
          },
          "dependencies": [
            "aws_internet_gateway.new-igw",
            "aws_route_table.new-rtb",
            "aws_subnet.subnets",
            "aws_vpc.new-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-079c01b07aa3370fa",
            "route_table_id": "rtb-09a4afcd5dbf1124d",
            "subnet_id": "subnet-01da7f8eb44fefde9"
          },
          "dependencies": [
            "aws_internet_gateway.new-igw",
            "aws_route_table.new-rtb",
            "aws_subnet.subnets",
            "aws_vpc.new-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "new-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:327165841486:security-group/sg-05318874b53d14879",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05318874b53d14879",
            "ingress": [],
            "name": "terraform-20221209232859433000000001",
            "name_prefix": "terraform-",
            "owner_id": "327165841486",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fullcycle-sg"
            },
            "tags_all": {
              "Name": "fullcycle-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03786ba3c3ec5ea1a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.new-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:327165841486:subnet/subnet-0bb8c2e0e6a2cc4a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bb8c2e0e6a2cc4a7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "327165841486",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fullcycle-subnet-0"
            },
            "tags_all": {
              "Name": "fullcycle-subnet-0"
            },
            "vpc_id": "vpc-03786ba3c3ec5ea1a"
          },
          "dependencies": [
            "aws_vpc.new-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:327165841486:subnet/subnet-01da7f8eb44fefde9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01da7f8eb44fefde9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "327165841486",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fullcycle-subnet-1"
            },
            "tags_all": {
              "Name": "fullcycle-subnet-1"
            },
            "vpc_id": "vpc-03786ba3c3ec5ea1a"
          },
          "dependencies": [
            "aws_vpc.new-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "new-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:327165841486:vpc/vpc-03786ba3c3ec5ea1a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d5ba6959fc9b515d",
            "default_route_table_id": "rtb-0d12460f58ed43ab1",
            "default_security_group_id": "sg-09fe842df46ad8807",
            "dhcp_options_id": "dopt-0a4cdedac53ff4e18",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03786ba3c3ec5ea1a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d12460f58ed43ab1",
            "owner_id": "327165841486",
            "tags": {
              "Name": "fullcycle-vpc"
            },
            "tags_all": {
              "Name": "fullcycle-vpc"
            }
          }
        }
      ]
    }
  ]
}